--- a/project/backend/.env
+++ b/project/backend/.env
@@ -1,5 +1,6 @@
 
 NODE_ENV = development
 PORT = 3000
+JWT_SECRET=greenrootSecret
 
 mongoURL = "mongodb+srv://linwick679:linal123@cluster0.bihav.mongodb.net/GreenRoot?retryWrites=true&w=majority&appName=Cluster0"
