--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "dotenv": "^16.4.7",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
