--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
