--- a/project/backend/.env
+++ b/project/backend/.env
@@ -2,4 +2,4 @@
 NODE_ENV = development
 PORT = 3000
 
-mongoURL = "mongodb+srv://linwick679:linal123@cluster0.bihav.mongodb.net/GreenRoot?retryWrites=true&w=majority&appName=Cluster0"
+mongoURL = "mongodb+srv://shashansn:shashan123@cluster0.bn7ih.mongodb.net/workout_db?retryWrites=true&w=majority&appName=Cluster0"
