--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
