--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
