--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.3",
+    "boxicons": "^2.1.4",
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
