--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.3",
     "boxicons": "^2.1.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
@@ -23,10 +30,13 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.0.12"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.12",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.13",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
