--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-accessible-accordion": "^5.0.0",
