--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
