--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.3",
     "boxicons": "^2.1.4",
+    "canvg": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
